--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATASOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
-spring.datasource.username=huyvo
-spring.datasource.password=5499
+spring.datasource.username=postgres
+spring.datasource.password=6513002363
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
