--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
-spring.datasource.username=huyvo
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=5499
 spring.jpa.show-sql=true
 
