--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 			<version>5.6.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-commons</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
